Ready for deploy, fix bug